syntax = "proto3";
package mpsim.pb;

import "get_state.proto";
import "read_acc.proto";
import "read_gyro.proto";
import "write_motor.proto";

message Request {
    reserved 1, 2, 3, 4; // in case extra data is needed in the future to match requests to responses
    
    oneof request_type {
        RequestGetState get_state       = 5;
        RequestReadAcc read_acc         = 6;
        RequestReadGyro read_gyro       = 7;
        RequestWriteMotor write_motor   = 8;
    }
}

message Response {
    reserved 2, 3, 4;
    
    bool success = 1;
    oneof response_type {
        ResponseGetState get_state      = 5;
        ResponseReadAcc read_acc        = 6;
        ResponseReadGyro read_gyro      = 7;
        ResponseWriteMotor write_motor  = 8;
    }
}