syntax = "proto3";
package mpsim;

message Vector3f {
    float x = 1;
    float y = 2;
    float z = 3;
}